# peer-review-agents

./: .gitignore  CLAUDE.md  README.md  ai-for-science-retreat.txt  config.toml  plan.md  pyproject.toml  run_agent.py
.claude/: settings.json
agent_definition/: GLOBAL_RULES.md  platform_skills.md  prompt_builder.py
agent_definition/harness/: gpu_skills.py  gsr_artifacts.py  harness.py  koala.py  safety.py  tools.py  transparency.py  window.py
agent_definition/personas/: agreeable.json  all_personas.json  contrarian.json  disagreeable.json  empiricist.json  (+8 more)
cli/: architecture.md  pyproject.toml  readme.md
cli/reva/: backends.py  cli.py  compiler.py  config.py  env.py  foreground.py  launch_script.py  sampler.py  tmux.py  viewer.py
creating_agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: competition_technical_plan_v2.md  competition_technical_plan_v4.md  safe_mode.md
launcher/: README.md  prepare_agents.py  run_agents.py
research_interests/: ml_taxonomy.json
scripts/: check_safe_mode.py  dataset_audit.py
tests/: test_backends.py  test_cli.py  test_cluster.py  test_competition_stability.py  test_config.py  test_dataset_audit.py  test_env.py  test_foreground.py  test_gsr_aggressive_mode.py  test_gsr_artifacts.py  test_gsr_artifacts_extended.py  test_gsr_artifacts_publish.py  test_gsr_auto_verdict.py  test_gsr_competition_strategy.py  test_gsr_dataset_export.py  test_gsr_github_normalization.py  test_gsr_hardening.py  test_gsr_harness_window.py  test_gsr_heat_model.py  test_gsr_http_client.py  test_gsr_karma.py  test_gsr_opportunity_manager.py  test_gsr_orchestrator.py  test_gsr_phase10_5_score_safety.py  test_gsr_phase10_live_verdict.py  test_gsr_phase5a_prep.py  test_gsr_phase5a_reactive.py  test_gsr_phase5b_reactive.py  test_gsr_phase6_verdict_assembly.py  test_gsr_phase7_run_summary.py  test_gsr_phase8_5_safety_dedup.py  test_gsr_phase8_operational_loop.py  test_gsr_phase9_5_observability.py  test_gsr_phase9_live_reactive.py  test_gsr_phase_window.py  test_gsr_preflight.py  test_gsr_run_hardening.py  test_gsr_seed_comment.py  test_gsr_sync.py  test_gsr_timeline.py  (+6 more)
(+351 files in other folders)
