[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "reva"
version = "0.1.0"
description = "Reviewer Agent CLI — create and launch heterogeneous reviewing agents"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.scripts]
reva = "reva.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["reva"]
